    - Added back Animal/Trough/Beehive radius. Options -> Gameplay
    - Added back the special menu when you alt + right click objects.
        - This will let you hide, add sound, or delete objects
    - Added in MenuGrid custom menus. Management windows are under the "Management" icon or 'm' key at the top level of menugrid
        - Under this is the Management icons for Hidden, Deleted, and Alerted items to see and modify (keys: 'h', 'd', 'a' respectively)
1.0.6
    - Added in Account management
    - Can now see how far you are from quests by looking at their tooltip when mousing over the pointer icon.
        - This is only accurate to within ~1000 tiles.
    - Can now lock items again in inventory and on mouse via ctrl+right click or '`' for mouse item
    - Added back in movable UI and converted over to my own position saving system. This covers:
        - Your main inventory, equipment window, character window, kith & kin window, map window, Calendar widget,
          Help Window, Your avatar, The Party view via right click, Bufflist (alt+right click drag buff icons)
    - Made it so that anything that is movable has to have a certain percentage of its width or height exposed otherwise
      it will rebound back into the clients window. This is to avoid people dragging windows off into oblivion and
      having to manually reset them in the settings
    - The buttons to bring up windows have been moved to the menugrid under management ('m'). You can still toggle them
      via the old keybinds as well
        - Equipment ('e')  Ctrl+E
        - Character Sheet ('c') Ctrl+T
        - Options ('o') Ctrl+O
        - Kith & Kin ('k') Ctrl+B
        - Map ('m') Ctrl+A
        - Inventory ('i') Tab
        - Minimap ('n')
    - Bumped the radius circle height back to 10 units like default
    - Control + hover over party member icons to see how far they are, limited to 1000 tiles..